Перепроверка и линтинг
