# internal/model/model.go
@@ -2,7 +2,7 @@ package model
 
 import "time"
 
-type UpdateId = uint64
+type TaskId = uint64
 type Code = string
 
 const (
@@ -10,12 +10,12 @@ const (
 	STATUS_FAILED  = "failed"
 )
 
-type Update struct {
-	ID             UpdateId  `json:"id,omitempty"`
+type Task struct {
+	ID             TaskId    `json:"id,omitempty"`
 	Price          *float64  `json:"price,omitempty"`
 	Code           Code      `json:"code,omitempty"`
 	IdempotencyKey string    `json:"idempotency_key,omitempty"`
 	CreatedAt      time.Time `json:"created_at,omitempty"`
-	UpdatedAt      time.Time `json:"updated_at,omitempty"`
+	TaskdAt        time.Time `json:"updated_at,omitempty"`
 	Status         string    `json:"status,omitempty"`
 }
